# SSMBNEW

./: Procfile  README.md  config.py  render.yaml  requirements.txt  run.py  setup.cfg
app/: __init__.py  extensions.py
app/forms/: auth_forms.py  profile_forms.py
app/models/: __init__.py  lookup.py  profile.py  user.py
app/routes/: admin.py  api.py  auth.py  member.py  profile.py  public.py
app/services/: backup_service.py  email_service.py  export_service.py  import_service.py
app/static/css/: forms.css  theme.css
app/static/js/: main.js
app/templates/: base.html
app/templates/admin/: _layout.html  activity_logs.html  add_member.html  backup.html  biodata_templates.html  dashboard.html  import_export.html  login_logs.html  manage_lookup.html  manage_users.html  registrations.html  reports.html  site_settings.html  trash.html
app/templates/auth/: forgot_password.html  login.html  register.html  reset_password.html
app/templates/errors/: 403.html  404.html  500.html
app/templates/member/: dashboard.html  shortlist.html
app/templates/profile/: compare.html  kundli_view.html  my_profile.html  profile_detail.html  profile_form.html  qr_view.html  search_results.html  view_persons.html
app/templates/profile/biodata_templates/: classic-blue.html  corporate-grey.html  floral-pink.html  (+7 more)
app/templates/public/: about.html  contact.html  home.html  qr_profile.html
app/utils/: astrology.py  biodata_pdf.py  context_processors.py  decorators.py  helpers.py  image_utils.py  kundli_matching.py  qr_utils.py  seed.py  template_filters.py
tests/: test_smoke.py
