[metadata]
name = citylight-sindhi-samaj-mb
version = 1.0.0
description = Citylight Sindhi Samaj Marriage Bureau Management Software
author = Citylight Sindhi Samaj, Surat
license = Proprietary

[options]
python_requires = >=3.12

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*
addopts = -v --tb=short

[flake8]
max-line-length = 130
exclude = venv,.venv,migrations,__pycache__
ignore = E501,W503

[isort]
profile = black
multi_line_output = 3
